# format_utils

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD-PARTY-NOTICES.txt  format_utils.hpp
.github/workflows/: cmake-multi-platform.yml  enforce-release-flow.yml
cmake/: deps.cmake
samples/: CMakeLists.txt  format_sample.cpp
tests/: CMakeLists.txt  format_test_helpers.hpp  format_tests.cpp
